fdo#66984: Define an assignment operator to prevent double deletion.

The code path was assigning one ScDPObject to another via assignment,
but we didn't define one. So we were using the compiler generated
assignment which only shallow-copies data members, which ultimately
caused double-deletion of one of its data members.

Change-Id: Ie98d0789e51aebff683dbcc0e533a9a0a87943d5
(cherry picked from commit bd976e5b070ec68a4f842190db4d0c1ea0e93428)